added prcp api route

--- a/Climate_Analysis.ipynb
+++ b/Climate_Analysis.ipynb
@@ -1758,14 +1758,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 282,
+   "metadata": {},
    "outputs": [],
    "source": [
     "@app.route(\"/\")\n",
-    "def welcome():\n",
+    "def welcome1():\n",
     "    \"\"\"Listing of the available API routes\"\"\"\n",
     "    return(\n",
     "        f\"Available Routes: <br/>\"\n",
@@ -1773,7 +1771,7 @@
     "        f\"/api/v1.0/stations <br/>\"\n",
     "        f\"/api/v1.0/tobs <br/>\"\n",
     "        f\"/api/v1.0/<start><br/>\"\n",
-    "        f\"/api/v1.0/<start><end>\"\n",
+    "        f\"/api/v1.0/<start>/<end>\"\n",
     "    )"
    ]
   },
@@ -1784,7 +1782,22 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "@app.route(\"/api/v1.0/precipitation\")\n",
+    "def precipitation():\n",
+    "    \"\"\"Query for the dates and temps for the last year\"\"\"\n",
+    "    \n",
+    "    # Query the database for dates and tobs\n",
+    "    prcp_results = session.query(Measurement.date, Measurement.tobs).\\\n",
+    "    filter(Measurement.date > '2017-01-01').all()\n",
+    "    \n",
+    "    # Create dictionary from row data and append to the list 'all_prcp'\n",
+    "    all_prcp = []\n",
+    "    for prcp in prcp_results:\n",
+    "        prcp_dict = {}\n",
+    "        prcp_dict[\"Date\"] = Measurement.date\n",
+    "        prcp_dict[\"TOBS\"] = Measurement.tobs"
+   ]
   }
  ],
  "metadata": {
