added stations api route

--- a/Climate_Analysis.ipynb
+++ b/Climate_Analysis.ipynb
@@ -1746,19 +1746,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 283,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Flask Setup\n",
-    "app = Flask(__weather__)"
+    "app = Flask(__name__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1777,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 285,
    "metadata": {
     "collapsed": true
    },
@@ -1796,7 +1796,22 @@
     "    for prcp in prcp_results:\n",
     "        prcp_dict = {}\n",
     "        prcp_dict[\"Date\"] = Measurement.date\n",
-    "        prcp_dict[\"TOBS\"] = Measurement.tobs"
+    "        prcp_dict[\"TOBS\"] = Measurement.tobs\n",
+    "        all_prcp.append(prcp_dict)\n",
+    "    return jsonify(all_prcp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "@app.route(\"/api/v1.0/stations\")\n",
+    "def stations():\n",
+    "    \"\"\"Query for the \"\"\""
    ]
   }
  ],
