added tobs api route

--- a/Climate_Analysis.ipynb
+++ b/Climate_Analysis.ipynb
@@ -1803,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 286,
    "metadata": {
     "collapsed": true
    },
@@ -1811,7 +1811,33 @@
    "source": [
     "@app.route(\"/api/v1.0/stations\")\n",
     "def stations():\n",
-    "    \"\"\"Query for the \"\"\""
+    "    \"\"\"Returns a list of stations from the dataset in JSON format\"\"\"\n",
+    "    \n",
+    "    station_results = session.query(Station.station).all()\n",
+    "    \n",
+    "    # Convert the list of tuples into a normal list:\n",
+    "    all_stations = list(np.ravel(station_results))\n",
+    "    \n",
+    "    return jsonify(all_stations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "@app.route(\"/api/v1.0/tobs\")\n",
+    "def tobs():\n",
+    "    \"\"\"Returns a list of temperature observations from the last year in JSON format \"\"\"\n",
+    "    \n",
+    "    #Query database for tobs for last year\n",
+    "    tobs_results = session.query(Measurement.tobs).filter(Measurement.date > '2017-01-01').all()\n",
+    "    \n",
+    "    # Convert the list of tuples into normal list:\n",
+    "    all_tobs = list(np.ravel(tobs_results))"
    ]
   }
  ],
